Make per-service sync_user-configurable.
